fix grid alignment row header

--- a/app/customer-dashboard/components/customer-details.component.scss
+++ b/app/customer-dashboard/components/customer-details.component.scss
@@ -57,9 +57,9 @@
     flex-direction: row;
     flex-wrap: wrap;
     height: 40px;
-    background:cornflowerblue;
+    background:#085287;
     color: #fff;
-    border-radius: 2px;
+    border-radius: 4px;
     border: 0.2px solid #dce5f2;
   }
 
